Updated my talk commitments

--- a/myTalks.html
+++ b/myTalks.html
@@ -16,12 +16,11 @@
   <h2>UPCOMING CONFERENCES</h2>
   I will be in<br />
   <ul style="text-align: left;">
-  <li><a href="http://talentumevents.fi/testaus/">Ohjelmistotestaus 2016</a> in Helsinki, Finland 8.11.2016</li>
-  <li><a href="http://www.ministryoftesting.com/training-events/testbash-philadelphia-2016/">Test Bash Philadelphia</a> in Philadelphia, USA, 10.-11.11.2016</li>
   <li><a href="http://aadays.pl">Agile and Automation Days 2016</a> in Warsaw, Poland 21.-22.11.2016</li>
   <li><a href="http://agiletestingdays.com">Agile Testing Days 2016</a> in Potsdam, Germany 5.-9.12.2016</li>
   <li><a href="http://expoqa.com">ExpoQA Test Academy</a> in Barcelona, Spain 25.1.2017</li>
   <li><a href="http://europeantestingconference.eu/">European Testing Conference 2017</a> in Helsinki, Finland 8.-10.2.2017</li>
+  <li><a href="https://ukstar.eurostarsoftwaretesting.com/">UKStar 2017</a> in London, UK 27.-28.2.2017</li>
   <li><a href="https://agilescandia.com">Agile Testing Days Scandinavia 2017</a> in Gothenburg, Sweden 27.-28.3.2017</li>
   </ul>
 
@@ -44,24 +43,37 @@
   <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
 
+<i>Amplify Your Impact with Mob Testing </i><br />
+&nbsp; Keynote speaker at UKStar, London, UK (27-28.2.2017) <br />
+<br />
+
+<i>Perfecting the Craft of Test Automation</i><br />
+&nbsp; Keynote speaker at Agile and Automation Days, Warsaw, Poland (21.11.2016)<br />
+&nbsp; Speaker at Talentum Testaus 2016, Helsinki, Finland (8.11.2016)<br />
+&nbsp; Speaker at AgileJKL meetup, Jyväskylä, Finland (7.9.2016)<br />
+<br />
+
+<i>Exploratory Testing - Explained and Experienced</i> [<a href="http://www.slideshare.net/maaretp/agile-serbia-exploratory-testing-explained-and-experienced">slides</a>]<br />
+&nbsp; Speaker (masterclass) at ExpoQA Academy Day, Barcelona (25.1.2017)
+&nbsp; Speaker (workshop) at TestWorks Conference, Amsterdam, the Netherlands (6.10.2016) (co-trained with Maaike Brinkhoff)
+&nbsp; Speaker (workshop) at Agile Serbia, Belgrade, Serbia (23.4.2016)<br />
+&nbsp; Speaker at Santa Barbara Agile meetup, Santa Barbara, USA (15.4.2015)<br />
+<br />
+
+<i>A Mob Testing Experience (Facilitated Mobbing on Stage)</i><br />
+&nbsp; Opening Speaker at TestBash Philly, Philadelphia, USA (10-11.11.2016)<br />
+<br />
+
 <i>We're Work in Progress - Lessons on Becoming a Great Tester</i><br />
 &nbsp; Keynote speaker at Test Masters Academy New Testing Conference, New York, USA (26-27.9.2016)<br />
 &nbsp; Speaker at FiSTB Testing Assembly, Helsinki, Finland (20-21.9.2016)<br />
 <br />
-
-<i>Perfecting the Craft of Test Automation</i><br />
-&nbsp; Keynote speaker at Agile and Automation Days, Warsaw, Poland (21.11.2016)
-&nbsp; Speaker at AgileJKL meetup, Jyväskylä, Finland (7.9.2016)
 
 <i>Mob Testing </i>[<a href="http://www.slideshare.net/maaretp/mob-testing">slides, mob exploratory testing emphasis</a>] [<a href="http://www.slideshare.net/maaretp/eurostar-webinar-mob-testing">slides, mob programming emphasis</a>]<br />
 &nbsp; Speaker at Ministry of Testing Masterclass webinar, Online (15.3.2016)<br />
 &nbsp; Speaker at EuroSTAR webinar, Online (20.4.2016)<br />
 &nbsp; Speaker at Agile Testing Days Scandinavia, Gothenburg, Sweden (28.4.2016)<br />
 &nbsp; Speaker at Talentum Ohjelmistotestaus 2016, Helsinki, Finland (24.5.2016) <br />
-<br />
-
-<i>A Mob Testing Experience (Facilitated Mobbing on Stage)</i><br />
-&nbsp; Speaker at TestBash Philly, Philadelphia, USA (10-11.11.2016)<br />
 <br />
 
 <i>Exploratory Testing an API</i> [<a href="http://www.slideshare.net/maaretp/agile2016-exploratory-testing-an-api">slides</a>]<br />
@@ -84,12 +96,7 @@
 &nbsp; Speaker at a company competence network, Helsinki, Finland (10.9.2015)<br />
 <br />
 
-<i>Exploratory Testing - Explained and Experienced&nbsp;</i> [<a href="http://www.slideshare.net/maaretp/agile-serbia-exploratory-testing-explained-and-experienced">slides</a>]<br />
-&nbsp; Speaker (masterclass) at ExpoQA Academy Day, Barcelona (25.1.2017)
-&nbsp; Speaker (workshop) at TestWorks Conference, Amsterdam, the Netherlands (6.10.2016) (co-trained with Maaike Brinkhoff)
-&nbsp; Speaker (workshop) at Agile Serbia, Belgrade, Serbia (23.4.2016)<br />
-&nbsp; Speaker at Santa Barbara Agile meetup, Santa Barbara, USA (15.4.2015)<br />
-<br />
+
 
 <i>Strong-Style Pairing&nbsp;</i>- paired talk with Llewellyn Falco  <a href="http://www.slideshare.net/llewellynfalco/strong-style-pairing">[slides]</a><br />
 &nbsp; Speaker at Agile 2016 Conference in Atlanta, GA, USA (25.-29.7.2016)<br />
