Updated my conferences

--- a/myTalks.html
+++ b/myTalks.html
@@ -22,6 +22,7 @@
   <li><a href="http://europeantestingconference.eu/">European Testing Conference 2017</a> in Helsinki, Finland 8.-10.2.2017</li>
   <li><a href="https://ukstar.eurostarsoftwaretesting.com/">UKStar 2017</a> in London, UK 27.-28.2.2017</li>
   <li><a href="https://agilescandia.com">Agile Testing Days Scandinavia 2017</a> in Gothenburg, Sweden 27.-28.3.2017</li>
+  <li><a href="https://agiletestingdays.us">Agile Testing Days USA 2017</a> in Boston, USA 19.-21.6.2017</li>
   </ul>
 
   <b> Would you like your conference to be on this list? Please <a href="mailto:maaret@iki.fi">invite me!</a></b>
@@ -96,8 +97,6 @@
 &nbsp; Speaker at a company competence network, Helsinki, Finland (10.9.2015)<br />
 <br />
 
-
-
 <i>Strong-Style Pairing&nbsp;</i>- paired talk with Llewellyn Falco  <a href="http://www.slideshare.net/llewellynfalco/strong-style-pairing">[slides]</a><br />
 &nbsp; Speaker at Agile 2016 Conference in Atlanta, GA, USA (25.-29.7.2016)<br />
 <br />
@@ -107,6 +106,7 @@
 <br />
 
 <i>Learning in Layers - A Demonstration of Exploratory Testing</i><br />
+&nbsp; Speaker at European Testing Conference 2017, Boston, USA (20.6.2017)<br />
 &nbsp; Speaker at European Testing Conference 2016, Bucharest, Romania (12.2.2016)<br />
 <br />
 
