--- a/myTalks.html
+++ b/myTalks.html
@@ -16,12 +16,11 @@
   <h2>UPCOMING CONFERENCES</h2>
   I will be in<br />
   <ul style="text-align: left;">
-  <li><a href="http://aadays.pl">Agile and Automation Days 2016</a> in Warsaw, Poland 21.-22.11.2016</li>
-  <li><a href="http://agiletestingdays.com">Agile Testing Days 2016</a> in Potsdam, Germany 5.-9.12.2016</li>
   <li><a href="http://expoqa.com">ExpoQA Test Academy</a> in Barcelona, Spain 25.1.2017</li>
   <li><a href="http://europeantestingconference.eu/">European Testing Conference 2017</a> in Helsinki, Finland 8.-10.2.2017</li>
   <li><a href="https://ukstar.eurostarsoftwaretesting.com/">UKStar 2017</a> in London, UK 27.-28.2.2017</li>
-  <li><a href="https://agilescandia.com">Agile Testing Days Scandinavia 2017</a> in Gothenburg, Sweden 27.-28.3.2017</li>
+  <li><a href="http://swisstestingday.ch">Swiss Testing Days 2017</a> in Zurich, Switzerland 15.3.2017</li>
+  <li><a href="http://nordictestingdays.eu">Nordic Testing Days 2017</a> in Tallinn, Estonia 7.-9.6.2017</li>
   <li><a href="https://agiletestingdays.us">Agile Testing Days USA 2017</a> in Boston, USA 19.-21.6.2017</li>
   </ul>
 
@@ -91,7 +90,7 @@
 <br />
 
 <i>Tales from Developer Tester Collaboration</i> [<a href="http://www.slideshare.net/maaretp/tales-from-tester-developer-collaboration">slides</a>] &nbsp;- paired talk with Llewellyn Falco<br />
-&nbsp; Speaker at Agile Serbia, Belgrade, Serbia (23.4.2016)<br />
+&nbsp; Keynote Speaker at Agile Serbia, Belgrade, Serbia (23.4.2016)<br />
 &nbsp; Opening talk Speaker at TestBash NY, New York, USA (6.11.2015)<br />
 &nbsp; Speaker at Software Testing Finland / Helsinki Agile Testing meetup (7.10.2015)<br />
 &nbsp; Speaker at a company competence network, Helsinki, Finland (10.9.2015)<br />
@@ -99,6 +98,8 @@
 
 <i>Strong-Style Pairing&nbsp;</i>- paired talk with Llewellyn Falco  <a href="http://www.slideshare.net/llewellynfalco/strong-style-pairing">[slides]</a><br />
 &nbsp; Speaker at Agile 2016 Conference in Atlanta, GA, USA (25.-29.7.2016)<br />
+&nbsp; Speaker at Tech Excellence meetup in Helsinki, Finland (June 2016)<br />
+
 <br />
 
 <i>Facilitating a Security Testing Mob </i>with Dan Billing<br />
@@ -106,7 +107,7 @@
 <br />
 
 <i>Learning in Layers - A Demonstration of Exploratory Testing</i><br />
-&nbsp; Speaker at European Testing Conference 2017, Boston, USA (20.6.2017)<br />
+&nbsp; Speaker at Agile Testing Days USA, Boston, USA (20.6.2017)<br />
 &nbsp; Speaker at European Testing Conference 2016, Bucharest, Romania (12.2.2016)<br />
 <br />
 
