Added missing short talk

--- a/myTalks.html
+++ b/myTalks.html
@@ -187,6 +187,7 @@
 <br />
 
 <i>Breaking Your Illusions with Exploratory Testing</i> [<a href="http://www.slideshare.net/maaretp/xp2015-breaking-your-illusions-with-exploratory-testing">slides</a>], short talk<br />
+&nbsp; Speaker at Agile 2016 Conference in Atlanta, GA, USA (25.-29.7.2016)<br />
 &nbsp;Speaker at XP2015, Helsinki, Finland (28.5.2015)<br />
 <br />
 
