--- a/myTalks.html
+++ b/myTalks.html
@@ -43,6 +43,10 @@
   <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
 
+<i>Women in Agile</i><br />
+&nbsp; Facilitator and opening speaker at Women in Agile Summit, Agile Testing Days, Potsdam, Germany (8.12.2016)  <br />
+<br />
+
 <i>Amplify Your Impact with Mob Testing </i><br />
 &nbsp; Keynote speaker at UKStar, London, UK (27-28.2.2017) <br />
 <br />
