Updated AgileTD + Stickyminds

--- a/myTalks.html
+++ b/myTalks.html
@@ -22,6 +22,7 @@
   <li><a href="http://swisstestingday.ch">Swiss Testing Days 2017</a> in Zurich, Switzerland 15.3.2017</li>
   <li><a href="http://nordictestingdays.eu">Nordic Testing Days 2017</a> in Tallinn, Estonia 7.-9.6.2017</li>
   <li><a href="https://agiletestingdays.us">Agile Testing Days USA 2017</a> in Boston, USA 19.-21.6.2017</li>
+  <li>Agile Testing Days 2017 in Potsdam, Germany 13-17.11.2017</li>
   </ul>
 
   <b> Would you like your conference to be on this list? Please <a href="mailto:maaret@iki.fi">invite me!</a></b>
