--- a/myTalks.html
+++ b/myTalks.html
@@ -16,21 +16,19 @@
   <h2>UPCOMING CONFERENCES</h2>
   I will be in<br />
   <ul style="text-align: left;">
-  <li><a href="http://expoqa.com">ExpoQA Test Academy</a> in Barcelona, Spain 25.1.2017</li>
-  <li><a href="http://europeantestingconference.eu/">European Testing Conference 2017</a> in Helsinki, Finland 8.-10.2.2017</li>
-  <li><a href="https://ukstar.eurostarsoftwaretesting.com/">UKStar 2017</a> in London, UK 27.-28.2.2017</li>
-  <li><a href="http://swisstestingday.ch">Swiss Testing Days 2017</a> in Zurich, Switzerland 15.3.2017</li>
   <li><a href="http://nordictestingdays.eu">Nordic Testing Days 2017</a> in Tallinn, Estonia 7.-9.6.2017</li>
-  <li><a href="https://agiletestingdays.us">Agile Testing Days USA 2017</a> in Boston, USA 19.-21.6.2017</li>
-  <li>Agile Testing Days 2017 in Potsdam, Germany 13-17.11.2017</li>
+  <li><a href="http://ncrafts.io/"> NewCrafts Conference </a> in Paris, France 18-19.5.2017</li>
+  <li><a href="https://craft-conf.com/">Craft Conference</a> in Budapest, Hungary 25-28.4.2017</li>
+  <li><a href="http://events.almatalent.fi/testaus/">TIVI Ohjelmistotestaus 2017</a> in Helsinki, Finland 16-17.5.2017</li>
+  <li><a href="https://starwest.techwell.com/">STARWest Conference 2017</a> in Anaheim, USA 1.-6.10.2017</li>
+  <li><a href="https://agiletestingdays.com/">AgileTD Agile Testing Days 2017</a>in Potsdam, Germany 13-17.11.2017 </li>
   </ul>
 
   <b> Would you like your conference to be on this list? Please <a href="mailto:maaret@iki.fi">invite me!</a></b>
 
   <H2>UPCOMING PUBLIC TRAININGS</H2>
   <ul style="text-align: left;">
-    <li> <a href="http://europeantestingconference.eu/2017/trainings/">Mob Testing</a>, 1 day, Helsinki (European Testing Conference), Finland 8.2.2016
-    <li> Tutkivan testauksen työkurssi (Exploratory Testing Work Course), 2 days, Helsinki (Talentum), Finland, February 2017 and September 2017</li>
+    <li> Tutkivan testauksen työkurssi (Exploratory Testing Work Course), 2 days, Helsinki (Talentum), Finland, September 2017</li>
     </ul>
 
 </td>
@@ -44,7 +42,33 @@
   <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
 
+<i>Learning through Osmosis </i><br />
+&nbsp; Keynote Speaker at Agile Testing Days 2017, Potsdam, Germany (13-17.11.2017) <br />
+<br />
+
+<i>Making Teams Awesome </i> <br />
+&nbsp; Keynote Speaker at STARWest Conference 2017, Anaheim, USA (1.-6.10.2017)<br />
+<br />
+
+<i>Exploratory Testing - Explained and Experienced</i> [<a href="http://www.slideshare.net/maaretp/agile-serbia-exploratory-testing-explained-and-experienced">slides</a>]<br />
+&nbsp; Speaker (workshop) at TIVI Ohjelmistotestaus 2017, Helsinki, Finland (16-17.5.2017)
+&nbsp; Speaker (masterclass) at ExpoQA Academy Day, Barcelona (25.1.2017)
+&nbsp; Speaker (workshop) at TestWorks Conference, Amsterdam, the Netherlands (6.10.2016) (co-trained with Maaike Brinkhoff)
+&nbsp; Speaker (workshop) at Agile Serbia, Belgrade, Serbia (23.4.2016)<br />
+&nbsp; Speaker at Santa Barbara Agile meetup, Santa Barbara, USA (15.4.2015)<br />
+<br />
+
+<i>Learning in Layers: A Demo on Exploratory Testing</i><br /> 
+&nbsp; Craft Conference, Budapest, Hungary (25-28.4.2017)<br />
+<br />
+
+<i>A Mob Testing Experience (Facilitated Mobbing on Stage)</i><br />
+&nbsp; Speaker at NewCrafts Conference, Paris, France (18-19.5.2017)<br />
+&nbsp; Opening Speaker at TestBash Philly, Philadelphia, USA (10-11.11.2016)<br />
+<br />
+
 <i>Women in Agile</i><br />
+&nbsp; Facilitator and opening speaker at Women in Agile Summit, Agile Testing Days, Potsdam, Germany (13-17.11.2017)  <br />
 &nbsp; Facilitator and opening speaker at Women in Agile Summit, Agile Testing Days, Potsdam, Germany (8.12.2016)  <br />
 <br />
 
@@ -56,17 +80,6 @@
 &nbsp; Keynote speaker at Agile and Automation Days, Warsaw, Poland (21.11.2016)<br />
 &nbsp; Speaker at Talentum Testaus 2016, Helsinki, Finland (8.11.2016)<br />
 &nbsp; Speaker at AgileJKL meetup, Jyväskylä, Finland (7.9.2016)<br />
-<br />
-
-<i>Exploratory Testing - Explained and Experienced</i> [<a href="http://www.slideshare.net/maaretp/agile-serbia-exploratory-testing-explained-and-experienced">slides</a>]<br />
-&nbsp; Speaker (masterclass) at ExpoQA Academy Day, Barcelona (25.1.2017)
-&nbsp; Speaker (workshop) at TestWorks Conference, Amsterdam, the Netherlands (6.10.2016) (co-trained with Maaike Brinkhoff)
-&nbsp; Speaker (workshop) at Agile Serbia, Belgrade, Serbia (23.4.2016)<br />
-&nbsp; Speaker at Santa Barbara Agile meetup, Santa Barbara, USA (15.4.2015)<br />
-<br />
-
-<i>A Mob Testing Experience (Facilitated Mobbing on Stage)</i><br />
-&nbsp; Opening Speaker at TestBash Philly, Philadelphia, USA (10-11.11.2016)<br />
 <br />
 
 <i>We're Work in Progress - Lessons on Becoming a Great Tester</i><br />
