Adding new conference

--- a/myTalks.html
+++ b/myTalks.html
@@ -17,9 +17,10 @@
   I will be in<br />
   <ul style="text-align: left;">
   <li><a href="http://nordictestingdays.eu">Nordic Testing Days 2017</a> in Tallinn, Estonia 7.-9.6.2017</li>
-  <li><a href="http://ncrafts.io/"> NewCrafts Conference </a> in Paris, France 18-19.5.2017</li>
   <li><a href="https://craft-conf.com/">Craft Conference</a> in Budapest, Hungary 25-28.4.2017</li>
   <li><a href="http://events.almatalent.fi/testaus/">TIVI Ohjelmistotestaus 2017</a> in Helsinki, Finland 16-17.5.2017</li>
+  <li><a href="http://ncrafts.io/">NewCrafts Conference </a> in Paris, France 18-19.5.2017</li>
+  <li><a href="http://www.testautomationday.com">Test Automation Day</a>, in Rotterdam, the Netherlands 22.6.2017</li>
   <li><a href="https://starwest.techwell.com/">STARWest Conference 2017</a> in Anaheim, USA 1.-6.10.2017</li>
   <li><a href="https://agiletestingdays.com/">AgileTD Agile Testing Days 2017</a>in Potsdam, Germany 13-17.11.2017 </li>
   </ul>
@@ -58,8 +59,12 @@
 &nbsp; Speaker at Santa Barbara Agile meetup, Santa Barbara, USA (15.4.2015)<br />
 <br />
 
-<i>Learning in Layers: A Demo on Exploratory Testing</i><br /> 
+<i>Learning in Layers: A Demo on Exploratory Testing</i><br />
 &nbsp; Craft Conference, Budapest, Hungary (25-28.4.2017)<br />
+<br />
+
+<i>Mob Testing for Better Test Automation</i><br />
+&nbsp; Test Automation Day, Rotterdam, the Netherlands (22.6.2017)<br />
 <br />
 
 <i>A Mob Testing Experience (Facilitated Mobbing on Stage)</i><br />
