--- a/myTalks.html
+++ b/myTalks.html
@@ -19,6 +19,7 @@
   <li><a href="https://craft-conf.com/">Craft Conference</a> in Budapest, Hungary 25-28.4.2017</li>
   <li><a href="http://events.almatalent.fi/testaus/">TIVI Ohjelmistotestaus 2017</a> in Helsinki, Finland 16-17.5.2017</li>
   <li><a href="http://ncrafts.io/">NewCrafts Conference </a> in Paris, France 18-19.5.2017</li>
+  <li>Agile by Wakaru in Helsinki, Finland 31.5.2017</li>
   <li><a href="http://nordictestingdays.eu">Nordic Testing Days 2017</a> in Tallinn, Estonia 7.-9.6.2017</li>
   <li><a href="http://www.testautomationday.com">Test Automation Day</a>, in Rotterdam, the Netherlands 22.6.2017</li>
   <li><a href="https://starwest.techwell.com/">STARWest Conference 2017</a> in Anaheim, USA 1.-6.10.2017</li>
@@ -61,6 +62,10 @@
 
 <i>Learning in Layers: A Demo on Exploratory Testing</i><br />
 &nbsp; Craft Conference, Budapest, Hungary (25-28.4.2017)<br />
+<br />
+
+<i>Modern Agile</i><br />
+&nbsp; Agile by Wakaru, Helsinki, Finland (31.5.2017)<br />
 <br />
 
 <i>Mob Testing for Better Test Automation</i><br />
