--- a/myTalks.html
+++ b/myTalks.html
@@ -31,6 +31,7 @@
   <H2>UPCOMING PUBLIC TRAININGS</H2>
   <ul style="text-align: left;">
     <li> Tutkivan testauksen työkurssi (Exploratory Testing Work Course), 2 days, Helsinki (Talentum), Finland, September 2017</li>
+	<li> Agile Testing, 2 days, Jyväskylä, May 2017</li>
     </ul>
 
 </td>
@@ -66,6 +67,10 @@
 
 <i>Modern Agile</i><br />
 &nbsp; Agile by Wakaru, Helsinki, Finland (31.5.2017)<br />
+<br />
+
+<i>Career in/with Testing</i><br />
+&nbsp; Finnish Software Testing, Helsinki Agile Testing -meetup, Helsinki, Finland (19.4.2017)<br />
 <br />
 
 <i>Mob Testing for Better Test Automation</i><br />
