--- a/myTalks.html
+++ b/myTalks.html
@@ -16,13 +16,13 @@
   <h2>UPCOMING CONFERENCES & MEETUPS</h2>
   I will be in<br />
   <ul style="text-align: left;">
-  <li><a href="https://craft-conf.com/">Craft Conference</a> in Budapest, Hungary 25-28.4.2017</li>
   <li><a href="http://events.almatalent.fi/testaus/">TIVI Ohjelmistotestaus 2017</a> in Helsinki, Finland 16-17.5.2017</li>
   <li><a href="http://ncrafts.io/">NewCrafts Conference </a> in Paris, France 18-19.5.2017</li>
   <li>Agile by Wakaru in Helsinki, Finland 31.5.2017</li>
   <li><a href="http://nordictestingdays.eu">Nordic Testing Days 2017</a> in Tallinn, Estonia 7.-9.6.2017</li>
   <li><a href="http://www.testautomationday.com">Test Automation Day</a>, in Rotterdam, the Netherlands 22.6.2017</li>
   <li><a href="https://starwest.techwell.com/">STARWest Conference 2017</a> in Anaheim, USA 1.-6.10.2017</li>
+  <li><a href="http://oredev.org/">Oredev Conference 2017</a> in Malmö, Sweden 6-10.11.2017</li>
   <li><a href="https://agiletestingdays.com/">AgileTD Agile Testing Days 2017</a>in Potsdam, Germany 13-17.11.2017 </li>
   </ul>
 
@@ -51,6 +51,10 @@
 
 <i>Making Teams Awesome </i> <br />
 &nbsp; Keynote Speaker at STARWest Conference 2017, Anaheim, USA (1.-6.10.2017)<br />
+<br />
+
+<i>An Exploratory Tester's lessons on Security Threat Modeling</i> <br />
+&nbsp; Speaker at Oredev 2017, Malmö, Sweden (6.-10.11.2017)<br />
 <br />
 
 <i>Exploratory Testing - Explained and Experienced</i> [<a href="http://www.slideshare.net/maaretp/agile-serbia-exploratory-testing-explained-and-experienced">slides</a>]<br />
