--- a/myTalks.html
+++ b/myTalks.html
@@ -16,8 +16,6 @@
   <h2>UPCOMING CONFERENCES & MEETUPS</h2>
   I will be in<br />
   <ul style="text-align: left;">
-  <li><a href="http://events.almatalent.fi/testaus/">TIVI Ohjelmistotestaus 2017</a> in Helsinki, Finland 16-17.5.2017</li>
-  <li><a href="http://ncrafts.io/">NewCrafts Conference </a> in Paris, France 18-19.5.2017</li>
   <li>Agile by Wakaru in Helsinki, Finland 31.5.2017</li>
   <li><a href="http://nordictestingdays.eu">Nordic Testing Days 2017</a> in Tallinn, Estonia 7.-9.6.2017</li>
   <li><a href="http://www.testautomationday.com">Test Automation Day</a>, in Rotterdam, the Netherlands 22.6.2017</li>
@@ -31,7 +29,7 @@
   <H2>UPCOMING PUBLIC TRAININGS</H2>
   <ul style="text-align: left;">
     <li> Tutkivan testauksen työkurssi (Exploratory Testing Work Course), 2 days, Helsinki (Talentum), Finland, September 2017</li>
-	<li> Agile Testing, 2 days, Jyväskylä, May 2017</li>
+	<li> Agile Testing, 2 days, Jyväskylä, May 29-30 2017</li>
     </ul>
 
 </td>
@@ -57,6 +55,10 @@
 &nbsp; Speaker at Oredev 2017, Malmö, Sweden (6.-10.11.2017)<br />
 <br />
 
+<i>Agile Testing -course (2 days)</i> <br />
+&nbsp; Trainer at public course with Urasilta, Jyväskylä, Finland (29-30.5.2017)<br />
+<br />
+
 <i>Exploratory Testing - Explained and Experienced</i> [<a href="http://www.slideshare.net/maaretp/agile-serbia-exploratory-testing-explained-and-experienced">slides</a>]<br />
 &nbsp; Speaker (workshop) at TIVI Ohjelmistotestaus 2017, Helsinki, Finland (16-17.5.2017)
 &nbsp; Speaker (masterclass) at ExpoQA Academy Day, Barcelona (25.1.2017)
@@ -67,6 +69,7 @@
 
 <i>Learning in Layers: A Demo on Exploratory Testing</i><br />
 &nbsp; Craft Conference, Budapest, Hungary (25-28.4.2017)<br />
+&nbsp; EIT Digital Lunch, Helsinki, Finland (12.5.2017)<br />
 <br />
 
 <i>Modern Agile</i><br />
