Updated talk commitments

--- a/myTalks.html
+++ b/myTalks.html
@@ -16,9 +16,8 @@
   <h2>UPCOMING CONFERENCES & MEETUPS</h2>
   I will be in<br />
   <ul style="text-align: left;">
-  <li>Agile by Wakaru in Helsinki, Finland 31.5.2017</li>
-  <li><a href="http://nordictestingdays.eu">Nordic Testing Days 2017</a> in Tallinn, Estonia 7.-9.6.2017</li>
   <li><a href="http://www.testautomationday.com">Test Automation Day</a>, in Rotterdam, the Netherlands 22.6.2017</li>
+  <li><a href="http://agiledayriga.lv/">Agile Day Riga</a>, in Riga, Latvia 7.-8.7.2017</li>
   <li><a href="https://starwest.techwell.com/">STARWest Conference 2017</a> in Anaheim, USA 1.-6.10.2017</li>
   <li><a href="http://oredev.org/">Oredev Conference 2017</a> in Malmö, Sweden 6-10.11.2017</li>
   <li><a href="https://agiletestingdays.com/">AgileTD Agile Testing Days 2017</a>in Potsdam, Germany 13-17.11.2017 </li>
@@ -29,7 +28,6 @@
   <H2>UPCOMING PUBLIC TRAININGS</H2>
   <ul style="text-align: left;">
     <li> Tutkivan testauksen työkurssi (Exploratory Testing Work Course), 2 days, Helsinki (Talentum), Finland, September 2017</li>
-	<li> Agile Testing, 2 days, Jyväskylä, May 29-30 2017</li>
     </ul>
 
 </td>
@@ -45,6 +43,7 @@
 
 <i>Learning through Osmosis </i><br />
 &nbsp; Keynote Speaker at Agile Testing Days 2017, Potsdam, Germany (13-17.11.2017) <br />
+&nbsp; Keynote Speaker at Agile Day Riga 2017, Riga, Latvia (7-8.7.2017) <br />
 <br />
 
 <i>Making Teams Awesome </i> <br />
@@ -53,6 +52,16 @@
 
 <i>An Exploratory Tester's lessons on Security Threat Modeling</i> <br />
 &nbsp; Speaker at Oredev 2017, Malmö, Sweden (6.-10.11.2017)<br />
+<br />
+
+
+<i>Incremental Improvement</i> <br />
+&nbsp; Speaker at Nordic Testing Days 2017, Tallinn, Estonia (8.-9.6.2017)<br />
+<br />
+
+<i>Learning Programming through Osmosis</i><a href="http://www.slideshare.net/maaretp/devoxxuk-learning-programming-through-osmosis">[slides]</a> <a href="https://www.youtube.com/watch?v=zIFEPCAkZCU&list=PLKuh52zVrL6l8RfKkezmHSMCcVqb2_NCC&">[video]</a><br />
+&nbsp; Speaker at Devoxx UK, London, UK (8.-10.6.2016)<br />
+&nbsp; Speaker at Nordic Testing Days, Tallinn, Estonia (8.-9.6.2017)<br />
 <br />
 
 <i>Agile Testing -course (2 days)</i> <br />
@@ -73,7 +82,7 @@
 <br />
 
 <i>Modern Agile</i><br />
-&nbsp; Agile by Wakaru, Helsinki, Finland (31.5.2017)<br />
+&nbsp; Agile 2017 by Wakaru, Helsinki, Finland (31.5.2017)<br />
 <br />
 
 <i>Career in/with Testing</i><br />
@@ -90,7 +99,6 @@
 <br />
 
 <i>Women in Agile</i><br />
-&nbsp; Facilitator and opening speaker at Women in Agile Summit, Agile Testing Days, Potsdam, Germany (13-17.11.2017)  <br />
 &nbsp; Facilitator and opening speaker at Women in Agile Summit, Agile Testing Days, Potsdam, Germany (8.12.2016)  <br />
 <br />
 
@@ -123,10 +131,6 @@
 &nbsp; Speaker (workshop) at Agile 2016 Conference in Atlanta, GA, USA (25.-29.7.2016)<br />
 &nbsp; Speaker (workshop) at TestWorks Conference in Amsterdam, Netherlands (7.10.2016)<br />
 &nbsp; Speaker at Sanoma Knowledge Exchange in Helsinki, Finland (7.11.2016)<br />
-<br />
-
-<i>Learning Programming through Osmosis</i><a href="http://www.slideshare.net/maaretp/devoxxuk-learning-programming-through-osmosis">[slides]</a> <a href="https://www.youtube.com/watch?v=zIFEPCAkZCU&list=PLKuh52zVrL6l8RfKkezmHSMCcVqb2_NCC&">[video]</a><br />
-&nbsp; Speaker at Devoxx UK, London, UK (8.-10.6.2016)<br />
 <br />
 
 <i>Tales from Developer Tester Collaboration</i> [<a href="http://www.slideshare.net/maaretp/tales-from-tester-developer-collaboration">slides</a>] &nbsp;- paired talk with Llewellyn Falco<br />
