--- a/myTalks.html
+++ b/myTalks.html
@@ -16,7 +16,6 @@
   <h2>UPCOMING CONFERENCES & MEETUPS</h2>
   I will be in<br />
   <ul style="text-align: left;">
-  <li><a href="http://www.testautomationday.com">Test Automation Day</a>, in Rotterdam, the Netherlands 22.6.2017</li>
   <li><a href="http://agiledayriga.lv/">Agile Day Riga</a>, in Riga, Latvia 7.-8.7.2017</li>
   <li><a href="https://starwest.techwell.com/">STARWest Conference 2017</a> in Anaheim, USA 1.-6.10.2017</li>
   <li><a href="http://oredev.org/">Oredev Conference 2017</a> in Malmö, Sweden 6-10.11.2017</li>
@@ -55,7 +54,7 @@
 <br />
 
 
-<i>Incremental Improvement</i> <br />
+<i>A Chase of Incremental Improvement</i> <br />
 &nbsp; Speaker at Nordic Testing Days 2017, Tallinn, Estonia (8.-9.6.2017)<br />
 <br />
 
