Updated the contents

--- a/myTalks.html
+++ b/myTalks.html
@@ -16,7 +16,8 @@
   <h2>UPCOMING CONFERENCES & MEETUPS</h2>
   I will be in<br />
   <ul style="text-align: left;">
-  <li><a href="http://agiledayriga.lv/">Agile Day Riga</a>, in Riga, Latvia 7.-8.7.2017</li>
+  <li><a href="http://agile.fi">Agile Finland Breakfast</a>, in Helsinki, Finland 1.9.2017</li>
+  <li><a href="http://seetest.org">SEETest</a>, in Sofia, Bulgaria 27.-29.9.2017</li>
   <li><a href="https://starwest.techwell.com/">STARWest Conference 2017</a> in Anaheim, USA 1.-6.10.2017</li>
   <li><a href="http://oredev.org/">Oredev Conference 2017</a> in Malmö, Sweden 6-10.11.2017</li>
   <li><a href="https://agiletestingdays.com/">AgileTD Agile Testing Days 2017</a>in Potsdam, Germany 13-17.11.2017 </li>
@@ -26,7 +27,8 @@
 
   <H2>UPCOMING PUBLIC TRAININGS</H2>
   <ul style="text-align: left;">
-    <li> Tutkivan testauksen työkurssi (Exploratory Testing Work Course), 2 days, Helsinki (Talentum), Finland, September 2017</li>
+    <li> <a href="http://www.seetest.org/index.php?page=mob-testing">Mob Testing, 1 day, Sofia, Bulgaria (SEETest)</a>, Sept 17th, 2017. </li>
+    <li> Tutkivan testauksen työkurssi (Exploratory Testing Work Course), 2 days, Helsinki (Talentum), Finland, Sept 4-5th, 2017</li>
     </ul>
 
 </td>
@@ -37,7 +39,7 @@
 <table>
   <td>
 
-  <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
+<h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
 
 <i>Learning through Osmosis </i><br />
@@ -47,12 +49,17 @@
 
 <i>Making Teams Awesome </i> <br />
 &nbsp; Keynote Speaker at STARWest Conference 2017, Anaheim, USA (1.-6.10.2017)<br />
+&nbsp; Keynote Speaker at SEETest Conference 2017, Sofia, Bulgaria (29.9.2017)<br />
 <br />
 
 <i>An Exploratory Tester's lessons on Security Threat Modeling</i> <br />
 &nbsp; Speaker at Oredev 2017, Malmö, Sweden (6.-10.11.2017)<br />
 <br />
 
+<i>Exploratory Testing - Explore with Intent - 1/2 day workshop</i> <br />
+&nbsp; Trainer at STARWest Conference 2017, Anaheim, USA (1.-6.10.2017)<br />
+&nbsp; Trainer at SEETest Conference 2017, Sofia, Bulgaria (28.9.2017)<br />
+<br />
 
 <i>A Chase of Incremental Improvement</i> <br />
 &nbsp; Speaker at Nordic Testing Days 2017, Tallinn, Estonia (8.-9.6.2017)<br />
@@ -82,6 +89,7 @@
 
 <i>Modern Agile</i><br />
 &nbsp; Agile 2017 by Wakaru, Helsinki, Finland (31.5.2017)<br />
+&nbsp; Agile Finland Breakfast, Helsinki, Finland (1.9.2017)<br />
 <br />
 
 <i>Career in/with Testing</i><br />
@@ -142,7 +150,6 @@
 <i>Strong-Style Pairing&nbsp;</i>- paired talk with Llewellyn Falco  <a href="http://www.slideshare.net/llewellynfalco/strong-style-pairing">[slides]</a><br />
 &nbsp; Speaker at Agile 2016 Conference in Atlanta, GA, USA (25.-29.7.2016)<br />
 &nbsp; Speaker at Tech Excellence meetup in Helsinki, Finland (June 2016)<br />
-
 <br />
 
 <i>Facilitating a Security Testing Mob </i>with Dan Billing<br />
@@ -155,10 +162,12 @@
 <br />
 
 <i>Exploratory Testing Work Course</i><br />
-&nbsp; Trainer for a customer organization, Helsinki, Finland (13.4.2016)<br />
-&nbsp; Trainer for Ministry of Testing public course, Brighton, UK (22.10.2015)<br />
-&nbsp; Trainer for a customer organization, Helsinki, Finland (26.11.2015)<br />
-&nbsp; Trainer for Altom public course, Helsinki, Finland (6.5.2015)<br />
+&nbsp; Trainer for Alma (2-days), Helsinki, Finland (3-4.9.2017) <br />
+&nbsp; Trainer for Alma (2-days), Helsinki, Finland (15-16.2.2017) <br />
+&nbsp; Trainer for a customer organization (1-day), Helsinki, Finland (13.4.2016)<br />
+&nbsp; Trainer for Ministry of Testing public course (1-day), Brighton, UK (22.10.2015)<br />
+&nbsp; Trainer for a customer organization (1-day), Helsinki, Finland (26.11.2015)<br />
+&nbsp; Trainer for Altom public course (1-day), Helsinki, Finland (6.5.2015)<br />
 <br />
 
 <i>Test Automation Work Course</i><br />
