Updated talks and articles

--- a/myTalks.html
+++ b/myTalks.html
@@ -16,13 +16,15 @@
   <h2>UPCOMING CONFERENCES & MEETUPS</h2>
   I will be in<br />
   <ul style="text-align: left;">
-  <li><a href="http://agiledayriga.lv/">Agile Day Riga</a>, in Riga, Latvia 7.-8.7.2017</li>
   <li><a href="http://agile.fi">Modern Agile Breakfast -meetup</a> in Helsinki, Finland 1.9.2017</li>
+  <li><a href="https://www.meetup.com/helsinki-software-testing/">Helsinki Software Testing -meetup</a> in Helsinki, Finland 12.9.2017</li>
+  <li><a href="https://zeit.co/day">Zeit Day Berlin</a> in Berlin, Germany 23.9.2017</li>
   <li><a href="http://www.seetest.org">SEETEST</a>, in Sofia, Bulgaria 28-29.9.2017</li>
   <li><a href="https://starwest.techwell.com/">STARWest Conference 2017</a> in Anaheim, USA 1.-6.10.2017</li>
   <li><a href="http://oredev.org/">Oredev Conference 2017</a> in Malmö, Sweden 6-10.11.2017</li>
   <li><a href="https://agiletestingdays.com/">AgileTD Agile Testing Days 2017</a> in Potsdam, Germany 13-17.11.2017 </li>
   <li><a href="http://europeantestingconference.eu">European Testing Conference 2018</a> in Amsterdam, 19-20.2.2018</li>
+  <li><a href="https://stareast.techwell.com/">STAREast Conference 2018</a>, in Orlando, USA, 29.4-4.5.2018</li>
   </ul>
 
   <b> Would you like your conference to be on this list? Please <a href="mailto:maaret@iki.fi">invite me!</a></b>
@@ -65,6 +67,20 @@
 <i>Exploratory Testing - Explore with Intent - 1/2 day workshop</i> <br />
 &nbsp; Trainer at STARWest Conference 2017, Anaheim, USA (1.-6.10.2017)<br />
 &nbsp; Trainer at SEETest Conference 2017, Sofia, Bulgaria (28.9.2017)<br />
+&nbsp; Trainer at STAREast Conference 2018, Orlando, USA (29.4-4.5.2018)<br />
+<br />
+
+<i>Breaking Illusions - Perspectives into Testing</i> <br />
+&nbsp; Speaker at Zeit Day Berlin, Berlin, Germany (23.9.2017) <br />
+<br />
+
+<i>Modern Agile</i><br />
+&nbsp; Speaker at Agile Finland Modern Agile Breakfast, Helsinki, Finland (1.9.2017)<br />
+&nbsp; Speaker at Agile 2017 by Wakaru, Helsinki, Finland (31.5.2017)<br />
+<br />
+
+<i>How Would You Test a Textbox? -workshop</i> <br />
+&nbsp; Facilitator at Helsinki Software Testing -meetup Helsinki, Finland (12.9.2017)<br />
 <br />
 
 <i>A Chase of Incremental Improvement</i> <br />
@@ -100,11 +116,6 @@
 <i>Learning in Layers: A Demo on Exploratory Testing</i><br />
 &nbsp; EIT Digital Lunch, Helsinki, Finland (12.5.2017)<br />
 &nbsp; Craft Conference, Budapest, Hungary (25-28.4.2017)<br />
-<br />
-
-<i>Modern Agile</i><br />
-&nbsp; Speaker at Agile Finland Modern Agile Breakfast, Helsinki, Finland (1.9.2017)<br />
-&nbsp; Speaker at Agile 2017 by Wakaru, Helsinki, Finland (31.5.2017)<br />
 <br />
 
 <i>Career in/with Testing</i><br />
