--- a/myArticles.html
+++ b/myArticles.html
@@ -16,7 +16,8 @@
   <h2>ARTICLES</h2>
 
   <ul style="text-align: left;">
-    <li>Mob Testing - a Learning and Contributing Mindshare. In <i>Ministry of Testing, the Testing Planet 2017</i>, September 2017.
+	<li>Making Teams Awesome (to be published) in <a href="https://www.quality-matters.org/">Quality Matters</a> 1/2018 
+	<li><a href="https://dojo.ministryoftesting.com/lessons/mob-testing-an-introduction-experience-report">Mob Testing: An Introduction and Experience Report</a> <i>in Ministry of Testing, the Testing Planet 2018</i>, January 2018.  
     <li><a href="https://drive.google.com/file/d/0B07e3JZGe_haVmRfOUFDLWRMcVU/view?usp=sharing">Five Controversial Ideas to Increase Your Impact as a Tester</a>. In Women Testers, August 2017. 
     <li><a href="https://www.stickyminds.com/article/amplified-learning-mob-testing">Amplified Learning with Mob Testing</a>. In <i>Stickyminds</i>, January 2017
     <li><a href="https://dojo.ministryoftesting.com/lessons/how-to-explore-with-intent-exploratory-testing-self-management">How to Explore with Intent - Exploratory Testing Self-Management</a>. In In <i>Ministry of Testing, the Testing Planet 2016</i>, November 2016.
