--- a/myTalks.html
+++ b/myTalks.html
@@ -10,28 +10,35 @@
 
   <h1>Speaking Engagements</h1>
 
+  <!--Total talk count by end of 2017 353 talks-->
+  <!--add flags of all countries I've spoken at-->
+  
 <table>
   <td>
 
   <h2>UPCOMING CONFERENCES & MEETUPS</h2>
   I will be in<br />
   <ul style="text-align: left;">
-  <li><a href="https://robocon.io">RoboCon - Robot Framework Conference</a> in Helsinki, Finland 18.1.2018
-  <li><a href="http://europeantestingconference.eu">European Testing Conference 2018</a> in Amsterdam, 19-20.2.2018</li>
+  <li>Moldova Software Testing and Automation Conference (MSTAC) in Chisinau, Moldova 10.3.2018</li>
+  <li><a href="https://www.socrates-ch.org/">Socrates Switzerland, in Ftan, Switzerland  15-18.3.2018</li> 
   <li><a href="https://dojo.ministryoftesting.com/events/testbash-netherlands-2018">TestBash Netherlands 2018</a>, in Utrecht, the Netherlands, 12-13.4.2018</li>
   <li><a href="https://stareast.techwell.com/">STAREast Conference 2018</a>, in Orlando, USA, 29.4-4.5.2018</li>
   <li><a href="https://craft-conf.com">Craft Conference</a>, in Budapest, Hungary 8-11.5.2018
+  <li>ExpoQA, in Madrid, Spain 4-6.6.2018
   <li><a href="https://nordictestingdays.eu/">Nordic Testing Days 2018</a> in Tallinn, Estonia 6-8.6.2018
   <li><a href="https://agiletestingdays.us">Agile Testing Days USA 2018</a>, in Boston, USA 25-27.6.2018</li>
+  <li><a href="https://2018.seleniumconf.in/">Selenium Conference India 2018</a>, in Bangalore, India 29-30.6.2018
+  <li><a href="https://seetest.org/">SEETest 2018 in Belgrade, Serbia 26.-28.9.2019</li>
   <li><a href="https://dojo.ministryoftesting.com/events/testbash-australia-2018">TestBash Australia</a> in Sydney, Australia 19.10.2018
   </ul>
 
   <b> Would you like your conference to be on this list? Please <a href="mailto:maaret@iki.fi">invite me!</a></b>
 
+  <!--
   <H2>UPCOMING PUBLIC TRAININGS</H2>
   <ul style="text-align: left;">
-	<li> <a href="http://events.almatalent.fi/tutkiva-testaus/">Tutkivan testauksen työkurssi (Exploratory Testing Work Course)</a>, 2 days, 13.-14.2.2018 in Helsinki (Talentum), Finland</li>
     </ul>
+   -->
 
 </td>
 </table>
@@ -64,13 +71,20 @@
 &nbsp; Facilitator at Helsinki Software Testing -meetup Helsinki, Finland (12.9.2017)<br />
 <br />
 
+<i>From Pull Requests to Pairing</i> <br />
+&nbsp; Lightning Talk Speaker at RoboCon, Helsinki, Finland (19.1.2018)<br />
+<br />
+
+<i>System Integrations' Testing (Järjestelmäintegraatioiden testaus)</i> <br />
+&nbsp; Speaker at Alma Talent Järjestelmäintegraatiot -seminaari, Helsinki, Finland (15.2.2018)<br />
+<br />
+
 <i>Learning in Layers - A Demonstration of Exploratory Testing</i><br />
 &nbsp; Speaker at Agile Testing Days USA, Boston, USA (25-29.6.2018)<br />
 &nbsp; Speaker at European Testing Conference 2016, Bucharest, Romania (12.2.2016)<br />
 <br />
 
 <i>Exploratory Testing Work Course</i><br />
-&nbsp; Trainer for Alma (2-days), Helsinki, Finland (13-14.2.2018) <br />
 &nbsp; Trainer for Alma (2-days), Helsinki, Finland (15-16.2.2017) <br />
 &nbsp; Trainer for a customer organization (1-day), Helsinki, Finland (13.4.2016)<br />
 &nbsp; Trainer for Ministry of Testing public course (1-day), Brighton, UK (22.10.2015)<br />
