--- a/myTalks.html
+++ b/myTalks.html
@@ -12,15 +12,13 @@
 
   <!--Total talk count by end of 2017 353 talks-->
   <!--add flags of all countries I've spoken at-->
-  
+
 <table>
   <td>
 
   <h2>UPCOMING CONFERENCES & MEETUPS</h2>
   I will be in<br />
   <ul style="text-align: left;">
-  <li>Moldova Software Testing and Automation Conference (MSTAC) in Chisinau, Moldova 10.3.2018</li>
-  <li><a href="https://www.socrates-ch.org/">Socrates Switzerland, in Ftan, Switzerland  15-18.3.2018</li> 
   <li><a href="https://dojo.ministryoftesting.com/events/testbash-netherlands-2018">TestBash Netherlands 2018</a>, in Utrecht, the Netherlands, 12-13.4.2018</li>
   <li><a href="https://stareast.techwell.com/">STAREast Conference 2018</a>, in Orlando, USA, 29.4-4.5.2018</li>
   <li><a href="https://craft-conf.com">Craft Conference</a>, in Budapest, Hungary 8-11.5.2018
@@ -29,7 +27,10 @@
   <li><a href="https://2018.seleniumconf.in/">Selenium Conference India 2018</a>, in Bangalore, India 29-30.6.2018
   <li><a href="https://seetest.org/">SEETest 2018 in Belgrade, Serbia 26.-28.9.2019</li>
   <li><a href="https://dojo.ministryoftesting.com/events/testbash-australia-2018">TestBash Australia</a> in Sydney, Australia 19.10.2018
+<!-- hustef --> 
   </ul>
+
+
 
   <b> Would you like your conference to be on this list? Please <a href="mailto:maaret@iki.fi">invite me!</a></b>
 
