Fixed the swedish flag

--- a/myTalks.html
+++ b/myTalks.html
@@ -15,7 +15,7 @@
     <th>Spoken at events in 25 countries</th>
 <table width="75%">
 <td><img class="flag" height="20" src="flags/4x3/fi.svg" alt="Finland "></td>
-<td><img class="flag" height="20" src="flags/4x3/sv.svg" alt="Sweden"></td>
+<td><img class="flag" height="20" src="flags/4x3/se.svg" alt="Sweden"></td>
 <td><img class="flag" height="20" src="flags/4x3/no.svg" alt="Norway"></td>
 <td><img class="flag" height="20" src="flags/4x3/dk.svg" alt="Denmark"></td>
 <td><img class="flag" height="20" src="flags/4x3/lv.svg" alt="Latvia"></td>
