Updated talk list

--- a/myTalks.html
+++ b/myTalks.html
@@ -108,7 +108,11 @@
 <br />
 
 <i>Getting Existing Code under Tests (demo talk)</i>
-&nbsp; Speaker at Helsinki Tech Girls meetup (8.2.2018)
+&nbsp; Speaker at Helsinki Tech Girls meetup (8.3.2018)
+<br />
+
+<i>Lessons Learned Building a Management Backend in AWS</i>
+&nbsp; Speaker at AWS Community Day, Helsinki, Finland (21.3.2018)
 <br />
 
 <i>From Pull Requests to Pairing</i> <br />
