Removed cancelled conferences

--- a/myTalks.html
+++ b/myTalks.html
@@ -12,7 +12,7 @@
 <h1>Speaking Engagements</h1>
 
   <table width="75%">
-    <th>Spoken at events in 25 countries</th>
+    <th>Spoken at events in 24 countries</th>
 <table width="75%">
 <td><img class="flag" height="20" src="flags/4x3/fi.svg" alt="Finland "></td>
 <td><img class="flag" height="20" src="flags/4x3/se.svg" alt="Sweden"></td>
@@ -38,7 +38,6 @@
 <td><img class="flag" height="20" src="flags/4x3/bg.svg" alt="Bulgaria"></td>
 <td><img class="flag" height="20" src="flags/4x3/in.svg" alt="India"></td>
 <td><img class="flag" height="20" src="flags/4x3/au.svg" alt="Australia"></td>
-<td><img class="flag" height="20" src="flags/4x3/gr.svg" alt="Greece"></td>
 
   <!--Total talk count by end of 2017 353 talks-->
   <!--add flags of all countries I've spoken at-->
@@ -59,11 +58,7 @@
   <li><a href="https://nordictestingdays.eu/">Nordic Testing Days 2018</a> in Tallinn, Estonia 6-8.6.2018</li>
   <li><a href="https://agiletestingdays.us">Agile Testing Days USA 2018</a>, in Boston, USA 25-27.6.2018</li>
   <li><a href="https://2018.seleniumconf.in/">Selenium Conference India 2018</a>, in Bangalore, India 29-30.6.2018</li>
-  <li><a href="http://agilesummit.gr">Agile Greece Summit 2018, Athens 20.-22.9.2018</a></li>
-  <li><a href="https://seetest.org/">SEETest 2018 in Belgrade, Serbia 26.-28.9.2018</li>
   <li><a href="https://dojo.ministryoftesting.com/events/testbash-australia-2018">TestBash Australia</a> in Sydney, Australia 19.10.2018</li>
-  <li><a href="https://www.hustef.hu">Hungarian Software Testing Forum (HUSTEF), Budapest, Hungary 29-31.10.2018</a> </li>
-
   </ul>
 
 
@@ -109,6 +104,7 @@
 
 <i>Getting Existing Code under Tests (demo talk)</i>
 &nbsp; Speaker at Helsinki Tech Girls meetup (8.3.2018)
+&nbsp; Speaker at Helsinki Software Testing meetup (16.4.2018)
 <br />
 
 <i>Lessons Learned Building a Management Backend in AWS</i>
