Updated articles and talks

--- a/myTalks.html
+++ b/myTalks.html
@@ -50,20 +50,16 @@
   <td>
 
   <h2>UPCOMING CONFERENCES & MEETUPS</h2>
+
+Since July 2018, I consider myself as a retired public speaker until further notice.
+I do online talks but want to limit travel and conferences to its bare minimum.
+I'm always happy to propose other awesome speakers, and I do keep track of them.
+Contact me at maaret@iki.fi. 
+
   I will be in<br />
   <ul style="text-align: left;">
-  <li><a href="https://dojo.ministryoftesting.com/events/testbash-netherlands-2018">TestBash Netherlands 2018</a>, in Utrecht, the Netherlands, 12-13.4.2018</li>
-  <li><a href="https://stareast.techwell.com/">STAREast Conference 2018</a>, in Orlando, USA, 29.4-4.5.2018</li>
-  <li><a href="https://craft-conf.com">Craft Conference</a>, in Budapest, Hungary 8-11.5.2018</li>
-  <li><a href="https://nordictestingdays.eu/">Nordic Testing Days 2018</a> in Tallinn, Estonia 6-8.6.2018</li>
-  <li><a href="https://agiletestingdays.us">Agile Testing Days USA 2018</a>, in Boston, USA 25-27.6.2018</li>
-  <li><a href="https://2018.seleniumconf.in/">Selenium Conference India 2018</a>, in Bangalore, India 29-30.6.2018</li>
   <li><a href="https://dojo.ministryoftesting.com/events/testbash-australia-2018">TestBash Australia</a> in Sydney, Australia 19.10.2018</li>
   </ul>
-
-
-
-  <b> Would you like your conference to be on this list? Please <a href="mailto:maaret@iki.fi">invite me!</a></b>
 
   <!--
   <H2>UPCOMING PUBLIC TRAININGS</H2>
@@ -82,8 +78,17 @@
 <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
 
+<i>Intersection of Automation and Exploratory Testing</i>
+&nbsp; Keynote Speaker at Selenium Conference India (29-30.6.2018)<br />
+&nbsp; Speaker at The Testing Guild Online Conference (20.6.2018)<br />
+<br />
+
+<i>Test Automation Primer, a one day course on Test Automation</i>
+&nbsp; Trainer at Alma Robotestaus event, Helsinki (13.6.2018)<br />
+<br />
+
 <i>Holding Space: Making Things Better by Doing Less</i>
-&nbsp; Speaker at Test Bash Netherlands in Utrech, the Netherlands (12-13.4.2018)
+&nbsp; Speaker at Test Bash Netherlands in Utrech, the Netherlands (12-13.4.2018)<br />
 <br />
 
 <i>Harnessing the Power of Learning - - paired talk with Ivan Turbin</i>
@@ -103,12 +108,12 @@
 <br />
 
 <i>Getting Existing Code under Tests (demo talk)</i>
-&nbsp; Speaker at Helsinki Tech Girls meetup (8.3.2018)
-&nbsp; Speaker at Helsinki Software Testing meetup (16.4.2018)
+&nbsp; Speaker at Helsinki Tech Girls meetup (8.3.2018)<br />
+&nbsp; Speaker at Helsinki Software Testing meetup (16.4.2018)<br />
 <br />
 
 <i>Lessons Learned Building a Management Backend in AWS</i>
-&nbsp; Speaker at AWS Community Day, Helsinki, Finland (21.3.2018)
+&nbsp; Speaker at AWS Community Day, Helsinki, Finland (21.3.2018)<br />
 <br />
 
 <i>From Pull Requests to Pairing</i> <br />
@@ -125,6 +130,8 @@
 <br />
 
 <i>Exploratory Testing Work Course</i><br />
+&nbsp; Trainer for F-Secure internal (1-day), Finland 15.8.2018 <br />
+&nbsp; Trainer for F-Secure internal (1-day), Finland 19.6.2018 <br />
 &nbsp; Trainer for Alma (2-days), Helsinki, Finland (15-16.2.2017) <br />
 &nbsp; Trainer for a customer organization (1-day), Helsinki, Finland (13.4.2016)<br />
 &nbsp; Trainer for Ministry of Testing public course (1-day), Brighton, UK (22.10.2015)<br />
@@ -209,6 +216,7 @@
 <br />
 
 <i>A Mob Testing Experience (Facilitated Mobbing on Stage)</i><br />
+&nbsp; Facilitator at a customer organization, Helsinki, Finland (31.5.2018) <br />
 &nbsp; Speaker at NewCrafts Conference, Paris, France (18-19.5.2017)<br />
 &nbsp; Opening Speaker at TestBash Philly, Philadelphia, USA (10-11.11.2016)<br />
 <br />
